--- a/components/Booking/ConfirmationForm.css
+++ b/components/Booking/ConfirmationForm.css
@@ -18,3 +18,26 @@
   transform: translateX(-400px);
   transition: opacity 300ms, transform 300ms;
 }
+
+/* Booking.js*/
+.car-options-enter {
+  opacity: 0;
+  transform: translateX(-100%);
+}
+
+.car-options-enter-active {
+  opacity: 1;
+  transform: translateX(0%);
+  transition: opacity 500ms, transform 500ms;
+}
+
+.car-options-exit {
+  opacity: 1;
+  transform: translateX(0%);
+}
+
+.car-options-exit-active {
+  opacity: 0;
+  transform: translateX(100%);
+  transition: opacity 500ms, transform 500ms;
+}
